# Generator

./: .gitignore  IMPROVEMENT_PLAN.md  README.md  pyproject.toml
configs/: config.yaml  prompts.yaml
docs/: ARCHITECTURE_DIAGRAMS.md  DESIGN_DOCUMENTATION.md  DOCUMENTATION_INDEX.md  EXTRACTION_METHODOLOGY.md  OVERVIEW.md  PAPER_IMPLEMENTATIONS.md  Papers_Analysis_and_Relationships.md
jarvis_qa_cot_24w/: cot_extras_not_in_qa.json  missing_cot_entries.json
jarvis_qa_full_24w_5pairs/: jarvis_qa_code_chunks.json  jarvis_qa_code_chunks.jsonl  jarvis_qa_code_chunks_intermediate.json  jarvis_qa_code_chunks_summary.json  jarvis_qa_curated_distribution.json  jarvis_qa_curated_metrics.json  jarvis_qa_text_chunks.json  jarvis_qa_text_chunks.jsonl  jarvis_qa_text_chunks_intermediate.json  jarvis_qa_text_chunks_summary.json
jarvis_qa_new_prompts/: fix_failed_cot.sh  jarvis_functiongemma_curated.json  jarvis_functiongemma_curated_tools.json  jarvis_functiongemma_raw.json  jarvis_qa_code_chunks.json  jarvis_qa_code_chunks.jsonl  jarvis_qa_code_chunks_intermediate.json  jarvis_qa_code_chunks_null_chunks.json  jarvis_qa_code_chunks_summary.json  jarvis_qa_curated.json  jarvis_qa_curated.jsonl  jarvis_qa_curated_cot_fixed.json  jarvis_qa_curated_distribution.json  jarvis_qa_curated_metrics.json  jarvis_qa_raw_cot_fixed.json  jarvis_qa_raw_cot_intermediate.json  jarvis_qa_text_chunks.json  jarvis_qa_text_chunks.jsonl  jarvis_qa_text_chunks_intermediate.json  jarvis_qa_text_chunks_null_chunks.json  jarvis_qa_text_chunks_summary.json  run_cot_enhancement.sh  temp_enhanced_cot_intermediate.json
jarvis_tool_training_24w/: jarvis_tool_all.json  jarvis_tool_chains.json  jarvis_tool_clean.json  jarvis_tool_curated.json  jarvis_tool_examples.json  jarvis_tool_validated.json
scripts/: convert_to_functiongemma.py
test/: benchmark_results.json  full_benchmark_results.json  full_benchmark_results.txt  ollama_benchmark_results.json  ollama_scalability_benchmark.py  qa_scalability_test.sh  run_benchmark_no_restart.py  run_extended_benchmark.sh  run_full_benchmark.sh  run_remaining.sh  test_scalability.sh
tests/: conftest.py  test_chain_first.py  test_clients.py  test_compare.py  test_cot_enhancer.py  test_curate.py  (+13 more)
(+75 files in other folders)
